python-web-server/tests/http/requests/invalid/009.py
from web_server.http.errors import LimitRequestHeaders

request = LimitRequestHeaders
